welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:54: error: not found: value levebrosse
  else levebrosse
       ^