welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while (fonctionTest==false){
    serpent()
  }
}

def fonctionTest():Boolean={
  if (estFaceMur==true){
    if (getDirection()==Direction.OUEST){
      	droite()
      if (estFaceMur==true){
        return true
      }
      else {
        gauche()
        return false
    }
    }
    else{
      if (getDirection()==Direction.EST){
      gauche()
      if (estFaceMur==true){
        return true
      }
      else {
      droite()
      return false
      }
    }
      else return false
    }
  }
  else return false
}
  

def serpent() {
  while (estFaceMur==false){
    avance()
  }
  if (fonctionTest()==false){
    if (getDirection()==Direction.EST){
      gauche()
      avance()
      gauche()
  }
    else {
      droite()
      avance()
      droite()
    }
  }
  else levebrosse
}